@@ -509,13 +509,13 @@ void create_player()
 
 	pango_layout_set_text(time_layout, "00:00", -1);
 
-
-	g_signal_connect(G_OBJECT(glade_xml_get_widget(xml_main_window, "eventbox_entry")), "enter-notify-event", 
+/* uncomment the following lines to enable tooltip on the title entry box */
+/*	g_signal_connect(G_OBJECT(glade_xml_get_widget(xml_main_window, "eventbox_entry")), "enter-notify-event", 
 			G_CALLBACK(tray_motion_cb), NULL);
 	g_signal_connect(G_OBJECT(glade_xml_get_widget(xml_main_window, "eventbox_entry")), "leave-notify-event",
 			G_CALLBACK(tray_leave_cb), NULL);
 
-
+*/
 
 	
 	/* check for errors and axit when there is no gui file */
